--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,7 +38,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: poetry install
       - name: Test with Pytest and measure coverage
-        run: pytest --cov-report=xml --cov=django_enhanced_settings tests/
+        run: poetry run pytest --cov-report=xml --cov=django_enhanced_settings tests/
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
