--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Allow for more complex and dynamic settings for Django"
 authors = ["Nihaal Sangha <18350092+OrangutanGaming@users.noreply.github.com>"]
 license = "MIT"
 include = ["LICENSE"]
+readme = "README.md"
+repository = "https://github.com/OrangutanGaming/django-enhanced-settings"
 
 [tool.poetry.dependencies]
 python = "^3.8"
